--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "knewstuff-4.99.0.tar.xz": fc42b4723a2c866d1a65d8de9d868e0ef8cb56a2
+  knewstuff-5.0.0.tar.xz: 1ca14b2e6cbe86ae5cf470980aeb47757201ca3f
