--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   knewstuff-5.13.0.tar.xz: 377f63108202d50d8d3d2d20a04269561b7b59da
+sources:
+  knewstuff-5.14.0.tar.xz: b9b7790a5b49e5f1752023032a61931a1459e772
